--- a/semesters/1/python/homeworks/2.2.ipynb
+++ b/semesters/1/python/homeworks/2.2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "executionInfo": {
      "elapsed": 2,
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "executionInfo": {
      "elapsed": 6,
@@ -100,21 +100,21 @@
     "def calc_words_statistics(queries: list[str]):\n",
     "    queries_words_count = [len(q.split()) for q in queries]\n",
     "\n",
-    "    total_words_count = {words_count: 0 for words_count in set(queries_words_count)}\n",
-    "\n",
-    "    for words_count in queries_words_count:\n",
-    "        total_words_count[words_count] += 1\n",
+    "    total_words_count = {\n",
+    "        words_count: queries_words_count.count(words_count)\n",
+    "        for words_count in set(queries_words_count)\n",
+    "    }\n",
     "\n",
     "    queries_count = len(queries)\n",
     "    statistics = {\n",
-    "        k: round(v / queries_count, 4) * 100 for k, v in total_words_count.items()\n",
+    "        k: round(v / queries_count * 100, 2) for k, v in total_words_count.items()\n",
     "    }\n",
     "    return statistics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
