--- a/semesters/1/python/homeworks/hw_3_topic_5.ipynb
+++ b/semesters/1/python/homeworks/hw_3_topic_5.ipynb
@@ -18,30 +18,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "248ff731",
+   "id": "8b39e4f9",
    "metadata": {},
    "source": [
-    "## Task 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c7e2438a",
-   "metadata": {},
-   "source": [
-    "Класс Product\n",
-    "\n",
-    "Атрибуты:\n",
-    "\n",
-    "- **name** (строка) — название товара;\n",
-    "\n",
-    "- **price** (число) — цена товара;\n",
-    "\n",
-    "- **stock** (целое число) — количество товара на складе.\n",
-    "\n",
-    "Методы:\n",
-    "\n",
-    "- **update_stock** (quantity) — метод, который обновляет количество товара на складе. Если количество становится отрицательным, должно выдаваться сообщение об ошибке.\n"
+    "## Classes"
    ]
   },
   {
@@ -75,14 +55,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "4863ef1a",
-   "metadata": {},
-   "source": [
-    "## Task 2"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 55,
    "id": "624f41c7",
@@ -105,14 +77,6 @@
     "            [quantity * product.price for product, quantity in self.products.items()]\n",
     "        )\n",
     "        return sum_total"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "20cab927",
-   "metadata": {},
-   "source": [
-    "## Task 3"
    ]
   },
   {
